# multi-agent-RAG

./: .gitignore  main.py  pyproject.toml
data/archive/pre_shared_corpus/agent_corpora/: corpus_manifest.csv  corpus_summary.json  materials_agent_documents.jsonl  metadata_agent_documents.jsonl  single_agent_documents.jsonl  story_agent_documents.jsonl
data/archive/pre_shared_corpus/agent_corpora_validated/: ambiguous_description_segments.csv  corpus_manifest.csv  corpus_summary.json  description_classification_audit.csv  materials_agent_documents.jsonl  metadata_agent_documents.jsonl  narrative_agent_documents.jsonl
data/validation/: corpus_validation_report.md  corpus_validation_summary.json  manual_review_sample.csv  possible_duplicate_pairs.csv
data/validation/document_type_tags_v2/: record_document_type_tags.csv  tag_audit_sample.csv  tag_summary.json
scripts/: build_index.py  explore_europeana.py  normalise_europeana.py  prepare_agent_corpora.py  prepare_shared_corpus.py  tag_document_types.py  test_europeana_api.py  validate_corpus.py
src/retrieval/: embeddings.py  vector_store.py
src/single_agent/: single_agent_rag.py
